<resources>
    <string name="app_name">GJob</string>
    <string name="admit_card">Admit Card</string>
    <string name="result">Result</string>
    <string name="latest_job">Latest Job</string>
    <string name="title_activity_detail">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="give_ratting">Give Ratting</string>
    <string name="feedback">Feedback</string>
    <string name="exit_dialog">Exit Dialog</string>
    <string name="do_you_really_want_to_exit_from_gjob_app">Do you really want to exit from GJob App</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    
<!--    Test AdMob Ids -->
<!--    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="app_open_unit_id">ca-app-pub-3940256099942544/3419835294</string>-->

    <!--    production AdMob Ids -->
    <string name="app_id">ca-app-pub-7184144287523649~5805986489</string>
    <string name="banner_unit_id">ca-app-pub-7184144287523649/6621402371</string>
    <string name="interstitial_unit_id">ca-app-pub-7184144287523649/4047209926</string>
    <string name="app_open_unit_id">ca-app-pub-7184144287523649/2682157364</string>

</resources>